css spacing fixed

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1425,6 +1425,11 @@ div.lan2017{
 
 .js .animate-box {
   opacity: 0;
+
+}
+
+div.two-part-commitee{
+  padding-top: 40px;
 }
 
 #fh5co-wrapper {
